2012-09-28  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/gnu/_G_config.h: Moved to ...
	* sysdeps/unix/sysv/linux/_G_config.h: ... here.
	* sysdeps/mach/hurd/_G_config.h: Moved to ...
	* sysdeps/generic/_G_config.h: ... here.

	* io/open.c (__open): Renamed to __libc_open.  Make __open an alias.

	* posix/Makefile ($(objpfx)config-name.h): Do $(make-target-directory).

	* nss/Makefile ($(objpfx)/libnss_test1.so$(libnss_test1.so-version)):
	Conditionalize target on [libnss_test1.so-version].

	* elf/dl-sysdep.c: Conditionalize whole contents on [SHARED].

	* Makeconfig (nssobjdir, resolvobjdir): Remove variables.
	(elfobjdir): Move out of conditionals.

	* nss/nsswitch.c (nss_new_service): Conditionalize definition and
	declaration on [!DO_STATIC_NSS || SHARED], matching its only caller.
	(__nss_lookup_function): Conditionalize label remove_from_tree on
	[!DO_STATIC_NSS || SHARED], matching its only use.

2012-09-28  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/multiarch/memcpy-niagara4.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/multiarch/memcpy-niagara4.S: New
	file.
	* sysdeps/sparc/sparc64/multiarch/Makefile: Add to
	sysdep_routines.
	* sysdeps/sparc/sparc32/sparcv9/multiarch/Makefile: Likewise.
	* sysdeps/sparc/sparc64/multiarch/memcpy.S: Use Niagara-4 memcpy
	when HWCAP_SPARC_CRYPTO is present.

2012-09-28  Pino Toscano  <toscano.pino@tiscali.it>

	* io/tst-mknodat.c: Create a FIFO instead of a socket.

2012-09-28  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #6530]
	* stdio-common/vfprintf.c (process_string_arg): Revert
	2000-07-22 change.

2011-09-28  Jonathan Nieder  <jrnieder@gmail.com>

	* stdio-common/Makefile (tst-sprintf-ENV): Set environment
	for testcase.
	* stdio-common/tst-sprintf.c: Include <locale.h>
	(main): Test sprintf's handling of incomplete multibyte
	characters.

2012-09-28  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/dl-runtime.c (VERSYMIDX): Removed.
	* elf/dl-version.c (VERSYMIDX): Likewise.